--- a/_config.yml
+++ b/_config.yml
@@ -80,15 +80,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Gowri Sankar Ramachandran"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
-  employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  bio              : "Senior Lecturer, School of Information Systems"
+  location         : "Brisbane, Australia"
+  employer         : "Queensland University of Technology"
+#  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  googlescholar    : "https://scholar.google.com/citations?user=bnr9PTcAAAAJ&hl=en"
+  email            : "g dot ramachandran at qut dot edu dot au"
+  researchgate     : "https://www.researchgate.net/profile/Gowri-Ramachandran"
   uri              :
   bitbucket        :
   codepen          :
