--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Gowri Sankar Ramachandran"
-  avatar           : "Gowri.png"
+  avatar           : "Gowri.jpg"
   bio              : "Senior Lecturer, School of Information Systems"
   location         : "Brisbane, Australia"
   employer         : "Queensland University of Technology"
